projects/sample_project/build/log/idf_py_stdout_output_1929
[1/9] Performing build step for 'bootloader'
[1/1] cd /root/code/esp32/projects/sample_project/build/bootloader/esp-idf/esptool_py && /root/.espressif/python_env/idf5.1_py3.10_env/bin/python /esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /root/code/esp32/projects/sample_project/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/root/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -I/root/code/esp32/projects/sample_project/build/config -I/root/code/esp32/projects/sample_project/main -I/esp-idf/components/newlib/platform_include -I/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/esp-idf/components/freertos/esp_additions/include/freertos -I/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/esp-idf/components/freertos/esp_additions/include -I/esp-idf/components/esp_hw_support/include -I/esp-idf/components/esp_hw_support/include/soc -I/esp-idf/components/esp_hw_support/include/soc/esp32 -I/esp-idf/components/esp_hw_support/port/esp32/. -I/esp-idf/components/esp_hw_support/port/esp32/private_include -I/esp-idf/components/heap/include -I/esp-idf/components/log/include -I/esp-idf/components/soc/include -I/esp-idf/components/soc/esp32/. -I/esp-idf/components/soc/esp32/include -I/esp-idf/components/hal/esp32/include -I/esp-idf/components/hal/include -I/esp-idf/components/hal/platform_port/include -I/esp-idf/components/esp_rom/include -I/esp-idf/components/esp_rom/include/esp32 -I/esp-idf/components/esp_rom/esp32 -I/esp-idf/components/esp_common/include -I/esp-idf/components/esp_system/include -I/esp-idf/components/esp_system/port/soc -I/esp-idf/components/esp_system/port/include/private -I/esp-idf/components/xtensa/include -I/esp-idf/components/xtensa/esp32/include -I/esp-idf/components/lwip/include -I/esp-idf/components/lwip/include/apps -I/esp-idf/components/lwip/include/apps/sntp -I/esp-idf/components/lwip/lwip/src/include -I/esp-idf/components/lwip/port/esp32/include -I/esp-idf/components/lwip/port/esp32/include/arch -I/esp-idf/components/esp_ringbuf/include -I/esp-idf/components/efuse/include -I/esp-idf/components/efuse/esp32/include -I/esp-idf/components/driver/include -I/esp-idf/components/driver/deprecated -I/esp-idf/components/driver/esp32/include -I/esp-idf/components/esp_pm/include -I/esp-idf/components/mbedtls/port/include -I/esp-idf/components/mbedtls/mbedtls/include -I/esp-idf/components/mbedtls/mbedtls/library -I/esp-idf/components/mbedtls/esp_crt_bundle/include -I/esp-idf/components/esp_app_format/include -I/esp-idf/components/bootloader_support/include -I/esp-idf/components/bootloader_support/bootloader_flash/include -I/esp-idf/components/app_update/include -I/esp-idf/components/spi_flash/include -I/esp-idf/components/pthread/include -I/esp-idf/components/esp_timer/include -I/esp-idf/components/app_trace/include -I/esp-idf/components/esp_event/include -I/esp-idf/components/nvs_flash/include -I/esp-idf/components/esp_phy/include -I/esp-idf/components/esp_phy/esp32/include -I/esp-idf/components/vfs/include -I/esp-idf/components/esp_netif/include -I/esp-idf/components/wpa_supplicant/include -I/esp-idf/components/wpa_supplicant/port/include -I/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/esp-idf/components/esp_wifi/include -I/esp-idf/components/unity/include -I/esp-idf/components/unity/unity/src -I/esp-idf/components/cmock/CMock/src -I/esp-idf/components/console -I/esp-idf/components/http_parser -I/esp-idf/components/esp-tls -I/esp-idf/components/esp-tls/esp-tls-crypto -I/esp-idf/components/esp_adc/include -I/esp-idf/components/esp_adc/interface -I/esp-idf/components/esp_adc/esp32/include -I/esp-idf/components/esp_adc/deprecated/include -I/esp-idf/components/esp_eth/include -I/esp-idf/components/esp_gdbstub/include -I/esp-idf/components/esp_gdbstub/xtensa -I/esp-idf/components/esp_gdbstub/esp32 -I/esp-idf/components/esp_hid/include -I/esp-idf/components/tcp_transport/include -I/esp-idf/components/esp_http_client/include -I/esp-idf/components/esp_http_server/include -I/esp-idf/components/esp_https_ota/include -I/esp-idf/components/esp_lcd/include -I/esp-idf/components/esp_lcd/interface -I/esp-idf/components/protobuf-c/protobuf-c -I/esp-idf/components/protocomm/include/common -I/esp-idf/components/protocomm/include/security -I/esp-idf/components/protocomm/include/transports -I/esp-idf/components/esp_local_ctrl/include -I/esp-idf/components/esp_psram/include -I/esp-idf/components/sdmmc/include -I/esp-idf/components/esp_serial_slave_link/include -I/esp-idf/components/espcoredump/include -I/esp-idf/components/espcoredump/include/port/xtensa -I/esp-idf/components/wear_levelling/include -I/esp-idf/components/fatfs/diskio -I/esp-idf/components/fatfs/vfs -I/esp-idf/components/fatfs/src -I/esp-idf/components/idf_test/include -I/esp-idf/components/idf_test/include/esp32 -I/esp-idf/components/ieee802154/include -I/esp-idf/components/json/cJSON -I/esp-idf/components/mqtt/esp-mqtt/include -I/esp-idf/components/perfmon/include -I/esp-idf/components/spiffs/include -I/esp-idf/components/ulp/ulp_common/include -I/esp-idf/components/ulp/ulp_common/include/esp32 -I/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/root/code/esp32/projects/sample_project=. -fmacro-prefix-map=/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.1-dev-437-g5c1044d84d\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /root/code/esp32/projects/sample_project/main/main.c
/root/code/esp32/projects/sample_project/main/main.c: In function 'app_main':
/root/code/esp32/projects/sample_project/main/main.c:35:17: error: expected ';' before 'if'
   35 |                 if (getchar() == 'b') {
      |                 ^~
At top level:
/root/code/esp32/projects/sample_project/main/main.c:15:13: warning: 'blink_led' defined but not used [-Wunused-function]
   15 | static void blink_led(void)
      |             ^~~~~~~~~
ninja: build stopped: subcommand failed.
